syntax = "proto3";

package com.example.demo.grpc;

option java_multiple_files = true;

service CalculatorService {
  rpc addition (OperationRequest) returns (OperationResponse);
  rpc subtraction (OperationRequest) returns (OperationResponse);
  rpc multiplication (OperationRequest) returns (OperationResponse);
  rpc division (OperationRequest) returns (OperationResponse);
  rpc generatePrimeNumbers (PrimeNumberRequest) returns (stream PrimeNumberResponse);
  rpc calculateAverage(stream Number) returns (stream Average);
  rpc calculateSquares(stream SquareRequest) returns (stream SquareResponse);
}

message OperationRequest {
  double x = 1;
  double y = 2;
}

message OperationResponse {
   double result = 1;
}

message PrimeNumberRequest {
  int32 number = 1;
}

message PrimeNumberResponse {
  int32 prime = 1;
}

message Number {
  double value = 1;
}

message Average {
  double value = 1;
}

message SquareRequest {
  int32 value = 1;
}

message SquareResponse {
  double value = 1;
}